Update: Now <td>'s svg arrows no longer get wrapped inside an extra <div>, so that Chrome 74 and Safari 11 both display arrow position accurately.

--- a/snippet/20190817-wed/wed.css
+++ b/snippet/20190817-wed/wed.css
@@ -218,12 +218,7 @@ body {
 	transform: rotate(0.25turn);
 }
 
-.arrow svg {
-	/* todo: I don't know why I need this ajustment to cut-off some of the arrow <svg>'s margins. */
-	transform: translateY(-0.22em);
-}
-
-.arrow.highlight svg path {
+svg.arrow.highlight path {
 	fill: var(--highlight-color);
 }
 
